Play Storeアップ用にアプリ名とバンドルID設定

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_app">
+    package="com.TheMenZ.ai_topaz">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="my_app"
+        android:label="ai_topaz"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
