--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.TheMenZ.ai_topaz">
+    package="com.TheMenZ.fl_topaz">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="ai_topaz"
